Added api key to config for client